--- a/html_css_javascript/trasenbachdiep/gioithieu.html
+++ b/html_css_javascript/trasenbachdiep/gioithieu.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giới thiệu</title>
-    <link rel="shortcut icon" href="Pictures/trang-chu/logophongtra.png" type="index/x-icon">
+    <link rel="shortcut icon" href="Pictures/trang-chu/icon.png" type="index/x-icon">
     <link rel="stylesheet" href="common/bootstrap.min.css">
     <link rel="stylesheet" href="css/gioithieu.css">
     <link rel="stylesheet" href="slick/slick.css">
